scripts/compilation/annotator/urlcaef331f4e_dreamable_cra_tgz-pJ8-coho_lp_project_LPProjectJ8.txt
../annotator/urlcaef331f4e_dreamable_cra_tgz-pJ8-coho_lp_project_LPProjectJ8/src/coho/lp/solver/DoubleIntervalCohoSolver.java:384: error: Nullable is not a repeatable annotation type
	@Nullable @Nullable @Nullable @Override //throw exception when clear feasible basis found.
	          ^
../annotator/urlcaef331f4e_dreamable_cra_tgz-pJ8-coho_lp_project_LPProjectJ8/src/coho/lp/solver/DoubleIntervalCohoSolver.java:384: error: Nullable is not a repeatable annotation type
	@Nullable @Nullable @Nullable @Override //throw exception when clear feasible basis found.
	                    ^
../annotator/urlcaef331f4e_dreamable_cra_tgz-pJ8-coho_lp_project_LPProjectJ8/src/coho/lp/project/LPProject.java:738: warning: [dep-ann] deprecated item is not annotated with @Deprecated
	protected Matrix findByPlane(Matrix A,Matrix b,Matrix x,Matrix y){
	                 ^
../annotator/urlcaef331f4e_dreamable_cra_tgz-pJ8-coho_lp_project_LPProjectJ8/src/coho/lp/project/LPProject.java:746: warning: [dep-ann] deprecated item is not annotated with @Deprecated
	protected ArrayList<Line> findPlanes(Matrix A, Matrix b,Matrix x, Matrix y){
	                          ^
../annotator/urlcaef331f4e_dreamable_cra_tgz-pJ8-coho_lp_project_LPProjectJ8/src/coho/lp/solver/DoubleIntervalCohoSolver.java:14: warning: [dep-ann] deprecated item is not annotated with @Deprecated
public class DoubleIntervalCohoSolver extends BasicCohoSolver {
       ^
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors
3 warnings
